--- a/front/src/components/app.css
+++ b/front/src/components/app.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    font-family: sans-serif;
 }
 h3{
     text-align: center;
