--- a/front/src/components/Time/time.css
+++ b/front/src/components/Time/time.css
@@ -11,7 +11,7 @@ body{
 
 button{
     width: 100px;
-    background: lightblue;
+    background-color: lightblue;
     border: none;
     border-radius: 10px;
     color: white;
